feat: adiciona módulo de anúncios
